# r3ctf-2025

./: .gitattributes  .gitignore  README.md
Blackchain/signin/: infra.sh
Blackchain/socpcl/: infra.sh
Blackchain/socpclv2/: infra.sh
Crypto/homokapig/: README.md
Crypto/r3coin/: README.md  infra.sh
Crypto/r3pus/: infra.sh  readme.md
Crypto/r3system_rev/: infra.sh
Crypto/r3tauq/: description.md  infra.sh
Crypto/spad3kapig/: infra.sh
Forensics/dfir2025_3/: infra.sh
Misc/aiseisei/: infra.sh
Misc/autoreview_rev/: .gitignore  Dockerfile
Misc/magicsvg/: infra.sh
Misc/nobrackets/: infra.sh
Misc/soundless/: infra.sh
Pwn/notawebchal/: infra.sh
Pwn/safenotepro/: README
Pwn/storybook/: infra.sh
Reverse/rollin/: infra.sh
Web/autoreview/: .gitignore  Dockerfile
Web/mohomi/: infra.sh
Web/silentprofit/: infra.sh
aiseisei/attachment/: chall.sh
aiseisei/deploy/: flag.py
aiseisei/solution/: input.tiff  model_dump.py  model_weight_dump.py  weights.xml
autoreview/: README.md  compose.yml  go.sum  main.go
autoreview/server/: main.go
autoreview_rev/: README.md  compose.yml  go.mod  main.go
autoreview_rev/common/: main.go
bullyelf/: infra.sh
dfir2025_2/: infra.sh
dfir2025_2/deploy/: server.py
dfir2025_3/deploy/: README.md  (+1 more)
evalgelist/: infra.sh
homokapig/: infra.sh
miniagent/: infra.sh
pigsay/: description.txt  infra.sh
pigsay/attachment/: compose.yml  pyproject.toml  start.sh
pigsay/attachment/static/: script.js
r3coin/: desp.txt
r3craft/: infra.sh
r3system/: infra.sh
r4craft/: infra.sh
safenotepro/: infra.sh
(+425 files in other folders)
